--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,20 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8 || ^5.7 || ^6.5"
     },
     "autoload": {
-        "psr-0": { "Ahc\\": "lib/" }
+        "psr-4": {
+            "Ahc\\": "lib/Ahc/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ahc\\Tests\\": "tests/Ahc/Tests/"
+        }
     },
     "extra": {
         "branch-alias": { "dev-master": "1.0-dev" }
